--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,331 @@
 @font-face {
-    font-family: "Zing Rust Demo"; 
-    src: url("./fonts/ZingRustDemo.otf") format("truetype"); 
+    font-family: "ZingRustDemo"; 
+    src: url("../fonts/ZingRustDemo.otf");
     font-style: normal; 
     font-weight: normal; 
     } 
-
 * {
     position: relative;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Zing Rust Demo", sans-serif;
+    font-family: "ZingRustDemo", sans-serif;
 }
-
 .form {
-    padding: 80px 0 120px 0;
+    padding: 87px 0 120px 0;
 }
 .container {
     max-width: 1470px;
     width: 100%;
+    margin: 0 auto;
 }
-
 h1 {
     color: #21201F;
     font-size: 60px;
-    font-style: italic;
-    font-weight: 400;
-    line-height: 0%;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 100%;
     text-transform: uppercase;
+    text-align: center;
+}
+.form-wrapper {
+    display: block;
+    width: 848px;
+    padding: 40px;
+    margin: 0 auto;
+    margin-top: 60px;
+    background-color: #F5F5F5;
+}
+h2.form-title {
+    font-family: 'Futura PT';
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-top: 2px;
+    display: block;
+}
+.radio-container {
+    display: flex;
+    margin: 15px -15px 30px -15px;
+}
+.radio-button {
+    margin-bottom: 10px;
+}
+.radio-button label {
+    cursor: pointer;
+}
+.radio-button input[type="radio"] {
+    display: none;
+}
+.radio-button label {
+    padding: 13.5px;
+    transition: all 0.3s;
+    background: #FFF;
+    width: 100%;
+    text-align: center;
+    color: #21201F;
+    font-family: 'Futura PT';
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.radio-button input[type="radio"]:checked + label {
+    background: #FF3033;
+    color: #fff;
+}
+
+.radio-button input[type="radio"] + label:hover {
+    background: #FF3033;
+    color: #fff;
+}
+
+.radio-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    padding: 0 15px;
+}
+
+.form-input {
+    display: block;
+    width: 100%;
+    height: 56px;
+    padding: 13.5px 25px;
+    margin-top: 20px;
+    color: #21201F;
+    font-family: 'Futura PT';
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border: 1px solid #DADADA;
+    outline: none;
+    background: #FFF;
+}
+
+.form-textarea {
+    max-width: 100%;
+    width: 100%;
+    min-height: 240px;
+    padding: 15px 25px;
+    margin-top: 20px;
+    border: 1px solid #DADADA;
+    outline: none;
+    color: #21201F;
+    font-family: 'Futura PT';
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.form-textarea::placeholder {
+    color: #979797;
+}
+
+.form-input::placeholder {
+    color: #979797;
+}
+
+.send-btn {
+    width: 100%;
+    padding: 18.5px 0;
+    text-align: center;
+    color: #FFF;
+    background: linear-gradient(90deg, #F31016 -30%, #FF7C3C 100%);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    margin-top: 13px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    position: relative;
+}
+
+.send-btn::after,
+.send-btn::before {
+    content: '';
+    display: block;
+    position: absolute;
+    background-color: #F5F5F5;
+    height: 105%;
+    width: 10px;
+    top: -2px;
+    transform: rotate(8deg);
+}
+
+.send-btn::before {
+    left: -5px;
+}
+
+.send-btn::after {
+    right: -5px;
+}
+
+.form-wrapper p {
+    color: #979797;
+    font-family: 'Futura PT';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: center;
+    margin-top: 16.5px;
+}
+
+.form-wrapper p a {
+    color: #979797;
+    font-family: 'Futura PT';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+@media (max-width: 1470px) {
+    .container {
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
+@media (max-width: 968px) {
+
+    h1 {
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 114.56%;
+    }
+
+    .form-wrapper {
+        margin-top: 40px;
+        width: 100%;
+        padding: 39px 42px;
+    }
+
+    h2.form-title {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        padding: 0;
+    }
+
+    .radio-button label {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        padding: 13px 0;
+    }
+
+    .form-input {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 10px 25px;
+        height: 50px;
+        margin-top: 20px;
+    }
+
+    .radio-container {
+        margin: 16px -15px 31px -15px;
+    }
+
+    .form-textarea {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 13px 25px;
+    }
+
+    .send-btn {
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 17px 0;
+    }
+
+    .form-wrapper p {
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 115.38%;
+    }
+
+    .form-wrapper p a {
+        font-size: 12px;
+        line-height: 115.38%;
+    }
+}
+
+@media (max-width: 578px) {
+    .form-wrapper {
+        padding: 19px 17.5px;
+    }
+
+    h2.form-title {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+    }
+
+    .radio-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 9px 0 34px 0;
+    }
+
+    .radio-button {
+        width: 100%;
+        margin: 0;
+        padding: 8.5px 0;
+    }
+
+    .radio-button label {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+    }
+
+    .form-input {
+        margin-top: 17px;
+        height: 48px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 10px 13px;
+    }
+
+    .form-textarea {
+        margin-top: 16px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        padding: 14px 13px;
+    }
+
+    .send-btn {
+        margin-top: 8px;
+    }
+
+    .send-btn::after,
+    .send-btn::before {
+        transform: rotate(9deg);
+    }
 }
